--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         events and
                         meetings.</p>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-12">
+                <div class="col-lg-3 col-md-4 col-sm-12 flybe">
                     <button class="primary text-uppercase float-right">enquire now</button>
                 </div>
             </div>
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <div class="contactCTA bgColor--saffron mb-5">
+    <div class="colorCTA bgColor--saffron mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
