--- a/hospitality.html
+++ b/hospitality.html
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-lg-10 m-auto text-center ">
                 <p class="fz--lgBody">When using the conference facilities at Flybe Training Academy we have a range of bespoke hospitality packages to suit
@@ -85,21 +85,21 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-10 m-auto">
                 <div class="accordion" id="accordionExample">
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header" id="headingOne">
-                            <h5 class="my-0">
-                                <button id="accordbtn" class="btn btn-link text-light" type="button" data-toggle="collapse" data-target="#collapse1"
+                            <h4 class="my-0">
+                                <button id="accordbtn" class="d-flex align-items-center btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapse1"
                                     aria-expanded="true" aria-controls="collapse1">
-                                    <p class="m-0 float-left">Breakfast Menu</p><img class="float-right" src="./images/icons/accordian-arrow.png" alt="">
+                                    <p class="m-0 float-left fz--h4">Breakfast Menu</p><img class="ml-auto float-right" src="./images/icons/accordian-arrow.png" alt="">
                                 </button>
-                            </h5>
+                            </h4>
                         </div>
 
-                        <div id="collapse1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div id="collapse1" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
                                 moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
@@ -110,14 +110,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header" id="headingTwo">
-                            <h5 class="my-0">
-                                <button id="accordbtn" class="btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapse2"
+                            <h4 class="my-0">
+                                <button id="accordbtn" class="d-flex align-items-center btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapse2"
                                     aria-expanded="false" aria-controls="collapse2">
-                                    <p class="m-0 float-left">Mid Morning and Afternoon Refreshments</p><img class="float-right" src="./images/icons/accordian-arrow.png" alt="">
+                                    <p class="m-0 float-left fz--h4">Mid Morning and Afternoon Refreshments</p><img class="ml-auto float-right" src="./images/icons/accordian-arrow.png" alt="">
                                 </button>
-                            </h5>
+                            </h4>
                         </div>
                         <div id="collapse2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body">
@@ -130,14 +130,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header" id="headingThree">
-                            <h5 class="my-0">
-                                <button id="accordbtn" class="btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapse3"
+                            <h4 class="my-0">
+                                <button id="accordbtn" class="d-flex align-items-center btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapse3"
                                     aria-expanded="false" aria-controls="collapse3">
-                                    <p class="m-0 float-left">Finger buffet & Canapes</p><img class="float-right" src="./images/icons/accordian-arrow.png" alt="">
+                                    <p class="m-0 float-left fz--h4">Finger buffet & Canapes</p><img class="ml-auto float-right" src="./images/icons/accordian-arrow.png" alt="">
                                 </button>
-                            </h5>
+                            </h4>
                         </div>
                         <div id="collapse3" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body">
@@ -150,15 +150,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header" id="headingThree">
-                            <h5 class="my-0">
-                                <button id="accordbtn" class="btn btn-link collapsed text-light" type="button" data-toggle="collapse"
+                            <h4 class="my-0">
+                                <button id="accordbtn" class="d-flex align-items-center btn btn-link collapsed text-light" type="button" data-toggle="collapse"
                                     data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                    <p class="m-0 float-left">Platters</p><img class="float-right"
+                                    <p class="m-0 float-left fz--h4">Platters</p><img class="ml-auto float-right"
                                         src="./images/icons/accordian-arrow.png" alt="">
                                 </button>
-                            </h5>
+                            </h4>
                         </div>
                         <div id="collapse4" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body">
@@ -171,15 +171,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-header" id="headingThree">
-                            <h5 class="my-0">
-                                <button id="accordbtn" class="btn btn-link collapsed text-light" type="button" data-toggle="collapse"
+                            <h4 class="my-0">
+                                <button id="accordbtn" class="d-flex align-items-center btn btn-link collapsed text-light" type="button" data-toggle="collapse"
                                     data-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                                    <p class="m-0 float-left">Desserts</p><img class="float-right"
+                                    <p class="m-0 float-left fz--h4">Desserts</p><img class="ml-auto float-right"
                                         src="./images/icons/accordian-arrow.png" alt="">
                                 </button>
-                            </h5>
+                            </h4>
                         </div>
                         <div id="collapse5" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body">
@@ -199,12 +199,15 @@
 
     <div class="container mb-5">
         <div class="row">
-        <div class="col-lg-12 text-center mt-5 flybe">
-            <button class="primary text-uppercase m-auto">Enquire now</button>
+            <div class="col-lg-12 text-center flybe">
+                <button class="primary text-uppercase m-auto">Enquire now</button>
+            </div>
         </div>
     </div>
 
-    <div class="colorCTA bgColor--saffron mb-5">
+    <div class="clearfix"></div>
+
+    <div class="colorCTA bgColor--saffron">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -213,6 +216,28 @@
             </div>
         </div>
     </div>
+
+    <div class="bgColor--purple mb-5">
+        <div class="container ">
+            <div class="row">
+                <div class="col-lg-6 py-5">
+                    <h3 class="mb-0 mt-0 text-light">Perfect for your event.</h3>
+                    <h3 class="mt-0 text-light">Find out more.</h3>
+                    <div class="contactForm">
+                        <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
+                            aria-required="true" aria-invalid="false" placeholder="Name">
+                        <textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required"
+                            aria-required="true" aria-invalid="false" placeholder="Message"></textarea>
+                        <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit">
+                    </div>
+                    <p class="fz--smBody text-light mt-3">We will get back to you as soon as possible.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
     <div class="container">
         <div class="row">
