--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto text-uppercase">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Conferences & Events
+                        <a class="nav-link" href="./conferences.html">Conferences & Events
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hospitality</a>
+                        <a class="nav-link" href="./hospitality.html">Hospitality</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Meetings</a>
+                        <a class="nav-link" href="./media-hub.html">Meetings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
