--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bgColor--purple static-top py-3">
         <div class="container">
-            <img src="./images/white-logo.svg" alt="">
+            <a href="./index.html"><img src="./images/white-logo.svg" alt=""></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
             <div class="header col-lg-12 position-relative">
                 <img class="w-100" src="./images/header.jpg" alt="">
                 <div class=" header--corner">
-                    <h3 class="text-light mt-4 mb-0 ml-3">Conference <br>& Room Hire</h3>
+                    <h4 class="text-light mt-3 mb-0 ml-3">Conference <br>& Room Hire</h4>
                     <div class="header--corner--inner"></div>
                 </div>
             </div>
@@ -69,17 +69,17 @@
 
 
     <div class="container my-2">
-        <div class="bgColor--purple bRadius py-3 px-5">
+        <div class="bgColor--purple bRadius py-3 px-3">
             <div class="row">
-                <div class="col-lg-9 col-md-8 col-sm-12">
-                    <h2 class="mt-0 mb-2 text-light">The Flybe Training Academy</h2>
+                <div class="col-lg-8 col-md-12 col-sm-12 text-left-left text-center">
+                    <h4 class="mt-0 mb-2 text-light">The Flybe Training Academy</h4>
                     <p class="text-light m-0">Flybe Training Academy is the perfect venue for conferences, corporate hospitality functions,
                         training
                         events and
                         meetings.</p>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-12 flybe">
-                    <button class="primary text-uppercase float-right">enquire now</button>
+                <div class="col-lg-4 col-md-12 col-sm-12 flybe text-center">
+                    <button class="primary text-uppercase float-lg-right"><p>enquire now</p></button>
                 </div>
             </div>
         </div>
@@ -88,24 +88,24 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-lg-12 mt-4 text-center">
-                <h3 class="my-3">Services at the Training Academy</h3>
+                <h4 class="my-3">Services at the Training Academy</h4>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <img class="w-100" src="./images/conferences.jpg" alt="">
                 <div class="exampleBlock shadow py-3 px-4">
-                    <p class="m-0"><strong>Conferences ></strong></p>
+                    <h6 class="m-0">Conferences ></h6>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <img class="w-100" src="./images/trade.jpg" alt="">
                 <div class="exampleBlock shadow py-3 px-4">
-                    <p class="m-0"><strong>Trade Events ></strong></p>
+                    <h6 class="m-0">Trade Events ></h6>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <img class="w-100" src="./images/hospitality.jpg" alt="">
                 <div class="exampleBlock shadow py-3 px-4">
-                    <p class="m-0"><strong>Hospitality ></strong></p>
+                    <h6 class="m-0">Hospitality ></h6>
                 </div>
             </div>
         </div>
@@ -145,53 +145,60 @@
         </div>
     </div>
 
-    <div class="colorCTA bgColor--saffron mb-5">
+    <div class="colorCTA bgColor--saffron mb-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h3 class="text-light text-center my-3">Contact us on 01392 880 800</h3>
+                    <h4 class="text-light text-center my-3">Contact us on 01392 880 800</h4>
                 </div>
             </div>
         </div>
     </div>
+    <iframe class="mb-sm-5 mb-3" src="https://snazzymaps.com/embed/162795" width="100%" height="600px"
+        style="border:none;"></iframe>
+
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-2 col-md-3 text-center text-md-left mb-3">
-                <img class="w-100" src="./images/purple-logo.svg" alt="">
-
+            <div class="col-lg-2 col-md-3 text-center text-md-left mb-3 mb-sm-5">
+                <img class="w-50 w-sm-50 w-md-100" src="./images/purple-logo.svg" alt="">
+    
             </div>
-            <div class="col-lg-3 col-md-3 offset-lg-1 col-sm-4">
-                <h4 class="mt-0 mb-3">Media Hub</h4>
-                <ul class="list-unstyled">
-                    <li>Testimonials</li>
-                    <li>Brochure Downloads</li>
-                    <li>Media Enquiries</li>
-                </ul>
+            <div class="col-lg-3 col-md-3 offset-lg-1 col-sm-4 text-sm-left text-center">
+                <h5 class="mt-0 mb-3">Media Hub</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">Brochure Downloads</a></li>
+                        <li><a href="">Media Enquiries</a></li>
+                    </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4">
-                <h4 class="mt-0 mb-3">Other Flybe Sites</h4>
-                <ul class="list-unstyled">
-                    <li>Flybe.com</li>
-                    <li>Flybe Aviation Services</li>
-                    <li>Flybe XML/API</li>
-                </ul>
+            <div class="col-lg-3 col-md-3 col-sm-4 text-sm-left text-center">
+                <h5 class="mt-0 mb-3">Other Flybe Sites</h4>
+                    <ul class="list-unstyled">
+                        <li>Flybe.com</li>
+                        <li>Flybe Aviation Services</li>
+                        <li>Flybe XML/API</li>
+                    </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4">
-                <h4 class="mt-0 mb-3">Information</h4>
+            <div class="col-lg-3 col-md-3 col-sm-4 text-sm-left text-center">
+                <h5 class="mt-0 mb-3">Information</h5>
                 <ul class="list-unstyled">
-                    <li>Privacy Policy</li>
+                    <a href="./privacy-policy.html"><li>Privacy Policy</li></a>
                     <li>Cookie Policy</li>
                     <li>Terms of use</li>
                     <li>Contact Us</li>
                 </ul>
             </div>
-            <div class="col-lg-12">
-                <p>Flybe © 2019. All rights reserved</p>
-                <p>Flybe is committed to complete transparency regarding how we charge for our flights.</p>
-                <p>All fares quoted on Flybe.com are subject to availability, and are inclusive of all taxes, fees and charges.
-                More information is available on our ancillary charges and our pricing guide.
-                Flybe Limited, registered company 02769768, New Walker Hangar, Exeter International Airport, Exeter, Devon EX5 2BA</p>
+            <div class="col-lg-12 text-sm-left text-center">
+                <p class="fz--smBody">Flybe © 2019. All rights reserved</p>
+                <p class="fz--smBody">Flybe is committed to complete transparency regarding how we charge for our flights.
+                </p>
+                <p class="fz--smBody">All fares quoted on Flybe.com are subject to availability, and are inclusive of all
+                    taxes, fees and
+                    charges.
+                    More information is available on our ancillary charges and our pricing guide.
+                    Flybe Limited, registered company 02769768, New Walker Hangar, Exeter International Airport, Exeter,
+                    Devon EX5 2BA</p>
             </div>
         </div>
     </div>
