--- a/hospitality.html
+++ b/hospitality.html
@@ -32,7 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto text-uppercase">
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link" href="./conferences.html">Conferences & Events
                             
                         </a>
@@ -219,9 +219,9 @@
     </div>
 
     <div class="bgColor--purple mb-5">
-        <div class="container ">
+        <div class="container-fluid ">
             <div class="row">
-                <div class="col-lg-6 py-5">
+                <div class="col-lg-6 py-4 px-4">
                     <h4 class="mb-0 mt-0 text-light">Perfect for your event.</h3>
                     <h4 class="mt-0 text-light">Find out more.</h4>
                     <div class="contactForm">
@@ -233,7 +233,7 @@
                     </div>
                     <p class="fz--smBody text-light mt-3">We will get back to you as soon as possible.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6 px-0 mapHalfer">
                     <iframe class="" src="https://snazzymaps.com/embed/162795" width="100%" height="100%" style="border:none;"></iframe>
                 </div>
             </div>
@@ -243,21 +243,21 @@
 
 
 
-    <div class="container">
+    <div class="container footer">
         <div class="row">
-            <div class="col-lg-2 col-md-3 text-center text-md-left mb-3">
-                <img class="w-100" src="./images/purple-logo.svg" alt="">
+            <div class="col-lg-2 col-md-3 text-center text-md-left mb-3 mb-sm-5">
+                <img class="w-50 w-sm-50 w-md-100" src="./images/purple-logo.svg" alt="">
     
             </div>
-            <div class="col-lg-3 col-md-3 offset-lg-1 col-sm-4">
+            <div class="col-lg-3 col-md-3 offset-lg-1 col-sm-4 text-sm-left text-center">
                 <h5 class="mt-0 mb-3">Media Hub</h4>
                     <ul class="list-unstyled">
-                        <li>Testimonials</li>
-                        <li>Brochure Downloads</li>
-                        <li>Media Enquiries</li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">Brochure Downloads</a></li>
+                        <li><a href="">Media Enquiries</a></li>
                     </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4">
+            <div class="col-lg-3 col-md-3 col-sm-4 text-sm-left text-center">
                 <h5 class="mt-0 mb-3">Other Flybe Sites</h4>
                     <ul class="list-unstyled">
                         <li>Flybe.com</li>
@@ -265,16 +265,18 @@
                         <li>Flybe XML/API</li>
                     </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4">
+            <div class="col-lg-3 col-md-3 col-sm-4 text-sm-left text-center">
                 <h5 class="mt-0 mb-3">Information</h5>
                 <ul class="list-unstyled">
-                    <li>Privacy Policy</li>
+                    <a href="./privacy-policy.html">
+                        <li>Privacy Policy</li>
+                    </a>
                     <li>Cookie Policy</li>
                     <li>Terms of use</li>
                     <li>Contact Us</li>
                 </ul>
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12 text-sm-left text-center">
                 <p class="fz--smBody">Flybe © 2019. All rights reserved</p>
                 <p class="fz--smBody">Flybe is committed to complete transparency regarding how we charge for our flights.
                 </p>
