--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto text-uppercase">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="./conferences.html">Conferences & Events
-                            <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -158,7 +157,7 @@
         style="border:none;"></iframe>
 
 
-    <div class="container">
+    <div class="container footer">
         <div class="row">
             <div class="col-lg-2 col-md-3 text-center text-md-left mb-3 mb-sm-5">
                 <img class="w-50 w-sm-50 w-md-100" src="./images/purple-logo.svg" alt="">
