--- a/media-hub.html
+++ b/media-hub.html
@@ -159,21 +159,21 @@
         style="border:none;"></iframe>
 
 
-    <div class="container">
+    <div class="container footer">
         <div class="row">
-            <div class="col-lg-2 col-md-3 text-center text-md-left mb-3">
-                <img class="w-100" src="./images/purple-logo.svg" alt="">
+            <div class="col-lg-2 col-md-3 text-center text-md-left mb-3 mb-sm-5">
+                <img class="w-50 w-sm-50 w-md-100" src="./images/purple-logo.svg" alt="">
     
             </div>
-            <div class="col-lg-3 col-md-3 offset-lg-1 col-sm-4">
+            <div class="col-lg-3 col-md-3 offset-lg-1 col-sm-4 text-sm-left text-center">
                 <h5 class="mt-0 mb-3">Media Hub</h4>
                     <ul class="list-unstyled">
-                        <li>Testimonials</li>
-                        <li>Brochure Downloads</li>
-                        <li>Media Enquiries</li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">Brochure Downloads</a></li>
+                        <li><a href="">Media Enquiries</a></li>
                     </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4">
+            <div class="col-lg-3 col-md-3 col-sm-4 text-sm-left text-center">
                 <h5 class="mt-0 mb-3">Other Flybe Sites</h4>
                     <ul class="list-unstyled">
                         <li>Flybe.com</li>
@@ -181,16 +181,18 @@
                         <li>Flybe XML/API</li>
                     </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4">
+            <div class="col-lg-3 col-md-3 col-sm-4 text-sm-left text-center">
                 <h5 class="mt-0 mb-3">Information</h5>
                 <ul class="list-unstyled">
-                    <li>Privacy Policy</li>
+                    <a href="./privacy-policy.html">
+                        <li>Privacy Policy</li>
+                    </a>
                     <li>Cookie Policy</li>
                     <li>Terms of use</li>
                     <li>Contact Us</li>
                 </ul>
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12 text-sm-left text-center">
                 <p class="fz--smBody">Flybe © 2019. All rights reserved</p>
                 <p class="fz--smBody">Flybe is committed to complete transparency regarding how we charge for our flights.
                 </p>
