--- a/conferences.html
+++ b/conferences.html
@@ -99,9 +99,9 @@
 
     <div class="container mb-5">
         <div class="row rooms">
-            <div class="col-lg-4 rooms_single">
+            <div class="col-lg-4 col-md-4 rooms_single mb-3 mb-lg-0">
                 <img class="w-100" src="./images/lg-conf-suite.jpg" alt="">
-                <div class="rooms_single_content text-center pb-5">
+                <div class="rooms_single_content text-center pb-5 px-2 px-md-0">
                     <h6 class=" fontColor--purple mt-4 mb-1">Large Conference Suite</h6>
                     <ul class="list-unstyled">
                         <li>Cabaret Set-up: max 80 seated</li>
@@ -113,9 +113,9 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
-            <div class="col-lg-4 rooms_single">
+            <div class="col-lg-4 col-md-4 rooms_single mb-3 mb-lg-0">
                 <img class="w-100" src="./images/lg-meeting-room.jpg" alt="">
-                <div class="rooms_single_content text-center pb-5">
+                <div class="rooms_single_content text-center pb-5 px-2 px-md-0">
                     <h6 class="fontColor--purple mt-4 mb-1">Large Meeting Room</h6>
                     <ul class="list-unstyled">
                         <li>Boardroom Set-up: max 36 seated</li>
@@ -127,9 +127,9 @@
                     <h5 class="mt-5 mb-1 fontColor--purple">£275.00 per day</h4>
                 </div>
             </div>
-            <div class="col-lg-4 rooms_single">
+            <div class="col-lg-4 col-md-4 rooms_single mb-3 mb-lg-0">
                 <img class="w-100" src="./images/standard-room.jpg" alt="">
-                <div class="rooms_single_content text-center pb-5">
+                <div class="rooms_single_content text-center pb-5 px-2 px-md-0">
                     <h6 class="fontColor--purple mt-4 mb-1">Standard Meeting Room</h6>
                     <ul class="list-unstyled">
                         <li>Boardroom Set-up: max 20 seated</li>
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="col-lg-12 text-center mt-5 flybe">
-            <button class="primary text-uppercase m-auto"><p>Book Conference Suite</p></button>
+            <button class="primary text-uppercase m-auto confbtn"><p>Book Conference Suite</p></button>
         </div>
     </div>
 
