--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="header col-lg-12 position-relative">
                 <img class="w-100" src="./images/header.jpg" alt="">
                 <div class=" header--corner">
-                    <h4 class="text-light mt-3 mb-0 ml-3">Conference <br>& Room Hire</h4>
+                    <h4 class="text-light mt-3 mb-0 ml-0 ml-md-3">Conference <br>& Room Hire</h4>
                     <div class="header--corner--inner"></div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <div class="largeImage clearfix mb-5 position-relative">
+    <div class="largeImage clearfix mb-5 position-relative d-none d-sm-block">
         <img class="w-100" src="./images/boardrooms.png" alt="">
         <h3 class="position-absolute m-4 fontColor--purple">Boardrooms</h3>
     </div> 
