--- a/hospitality.html
+++ b/hospitality.html
@@ -221,7 +221,7 @@
     <div class="bgColor--purple mb-5">
         <div class="container-fluid ">
             <div class="row">
-                <div class="col-lg-6 py-4 px-4">
+                <div class="col-lg-6 py-4 px-3 px-md-5 mb-lg-0 mb-4">
                     <h4 class="mb-0 mt-0 text-light">Perfect for your event.</h3>
                     <h4 class="mt-0 text-light">Find out more.</h4>
                     <div class="contactForm">
